--- a/src/styles/_controls.scss
+++ b/src/styles/_controls.scss
@@ -2,6 +2,10 @@
   width: 50%;
   margin-top: 3rem;
   display: flex;
+
+  @media screen and (max-width: 600px) {
+    width: 85%;
+  }
 }
 
 #start_stop,
