--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,4 +3,5 @@
 @import "./timer";
 @import "./timerSettings";
 @import "./button";
-@import './controls';
+@import "./controls";
+@import "./visual";
