--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -9,12 +9,15 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+
+  @media screen and (max-width: 600px) {
+    font-size: 50%;
+  }
 }
 
 body {
-  font-family: 'Merienda', cursive;
+  font-family: "Merienda", cursive;
 
   background: linear-gradient(to right, #870000, #190a05);
   color: white;
-
 }
