--- a/src/styles/_timerSettings.scss
+++ b/src/styles/_timerSettings.scss
@@ -1,7 +1,16 @@
 .timerSettings {
   max-width: 100%;
+  width: 90%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  line-height: 2;
+
+  @media screen and (max-width: 600px) {
+    height: 35rem;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 10px;
+  }
 }
 
 .setting {
@@ -10,11 +19,25 @@
   &:not(:last-child) {
     margin-right: 3rem;
   }
+
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    &:not(:last-child) {
+      margin-right: 0;
+    }
+  }
 }
 
 #session-label,
 #break-label {
-  padding: 10px;
+  width: 16rem;
+  margin: 10px;
   font-size: 20px;
   letter-spacing: 2px;
+  @media screen and (max-width: 600px) {
+    width: 25rem;
+    margin: 0;
+  }
 }
